--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ footer {
 
 /* responseive */
 
-/* ipad */
+/* iPad Responsive */
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   nav h1 {
@@ -560,7 +560,7 @@ footer {
   }
 }
 
-/* iPHONE */
+/* iPHONE Responsive */
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
   /* home page iphone */
