--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ ul li a:hover {
 /* showcase  */
 .showcase {
   display: block;
-  background: url("/img/showcase.jpg") #333 no-repeat center center/cover;
+  background: url('/img/showcase.jpg') #333 no-repeat center center/cover;
   opacity: 80%;
   height: 600px;
   width: 100%;
@@ -119,7 +119,7 @@ ul li a:hover {
 /* 2 boxes below  */
 
 .link {
-  background: url("/img/showcase2.jpg") #333 no-repeat center center/cover;
+  background: url('/img/showcase2.jpg') #333 no-repeat center center/cover;
   height: 550px;
   width: 50%;
   float: left;
@@ -235,7 +235,7 @@ footer {
 #content {
   display: block;
   padding-bottom: 5rem;
-  background: url("/img/store.jpg") black no-repeat center center/cover;
+  background: url('/img/store.jpg') black no-repeat center center/cover;
 }
 
 #content h3 {
@@ -394,7 +394,7 @@ footer {
   font-size: 2rem;
 }
 
-/* responseive */
+/* responseiveness */
 
 /* iPad Responsive */
 
